--- a/index.html
+++ b/index.html
@@ -17,12 +17,18 @@
             overflow-x: hidden; /* Prevent horizontal scroll */
         }
 
-        header, nav, footer {
+        header, footer {
             position: fixed;
             width: 100%;
             z-index: 1000;
         }
-
+        
+        nav {
+            position: sticky;
+            width: 100%;
+            z-index: 1000;
+        }
+        
         header {
             background-color: #003366;
             color: white;
@@ -350,7 +356,6 @@
                         <td>01 - 02 - 03 - 04 - 05 -06</td>
                     </tr>
 
-
             <table>
                 <thead>
                     <tr>
@@ -497,10 +502,11 @@
     <div class="container">
         <h2>Winners</h2>
         <div class="gallery">
-            <img src="path_to_winner1.jpg" alt="Winner 1">
-            <img src="path_to_winner2.jpg" alt="Winner 2">
-            <img src="path_to_winner3.jpg" alt="Winner 3">
-            <!-- More images as needed -->
+            <img src="img/sep5.png" alt="SEPTEMBER 5">
+            <img src="img/sep4.png" alt="SEPTEMBER 4">
+            <img src="img/sep3.png" alt="SEPTEMBER 3">
+            <img src="img/sep2.png" alt="SEPTEMBER 2">
+            <img src="img/sep1.png" alt="SEPTEMBER 1">
         </div>
     </div>
 </section>
