--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             overflow-x: hidden; /* Prevent horizontal scroll */
         }
 
-        header, footer {
-            position: fixed;
+        header, nav, footer {
+            position: sticky;
             width: 100%;
             z-index: 1000;
         }
         
-        nav {
-            position: sticky;
+        footer {
+            position: fixed;
             width: 100%;
             z-index: 1000;
         }
