--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         }
 
         header, nav, footer {
-            position: sticky;
             width: 100%;
             z-index: 1000;
         }
@@ -225,7 +224,7 @@
     <!-- Header Section -->
     <header>
         <img src="img/lrs.png" alt="LRS Philippines Logo" class="logo">
-        <h1>Welcome to LRS Philippines Official</h1>
+        <h1>LRS Philippines Official</h1>
     </header>
 
     <!-- Navigation Menu -->
