--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LRS Philippines Official</title>
-   
+
     <!-- Combined CSS -->
     <style>
         /* General Styles */
@@ -14,26 +14,23 @@
             padding: 0;
             background-color: #f4f4f4;
             color: #333;
+            padding-top: 100px; /* Space for fixed header and nav */
             overflow-x: hidden; /* Prevent horizontal scroll */
         }
 
-        header, nav, footer {
-            width: 100%;
-            z-index: 1000;
-        }
-        
-        footer {
+        header, nav {
             position: fixed;
             width: 100%;
             z-index: 1000;
         }
-        
+
         header {
             background-color: #003366;
             color: white;
-            padding: 10px 0;
+            padding: 15px 0;
             top: 0;
             text-align: center;
+            height: 80px; /* Adjust height based on logo size */
         }
 
         .logo {
@@ -44,14 +41,18 @@
         nav {
             background-color: #0059b3;
             padding: 10px;
-            top: 60px; /* Adjust this based on the header height */
+            top: 80px; /* Adjust based on header height */
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         nav ul {
             list-style: none;
             padding: 0;
+            margin: 0;
             display: flex;
-            justify-content: space-around;
+            gap: 10px;
         }
 
         nav ul li {
@@ -78,12 +79,15 @@
             color: white;
             text-align: center;
             padding: 10px;
+            position: fixed;
             bottom: 0;
+            width: 100%;
+            z-index: 1000;
         }
 
         /* Section Styles */
         section {
-            padding: 80px 20px 20px; /* Add padding to account for fixed header/nav */
+            padding: 20px;
             background-color: white;
             margin-bottom: 20px;
         }
@@ -201,6 +205,11 @@
             nav ul li {
                 margin-bottom: 10px;
             }
+
+            header {
+                height: auto; /* Adjust based on logo size */
+                padding: 10px 0;
+            }
         }
 
         /* Game Images */
@@ -272,35 +281,35 @@
                 <img src="path_to_6_49_image.jpg" alt="6/49 Super Lotto" class="game-image">
                 <h3 class="game-title">6/49 Super Lotto</h3>
                 <div class="game-details hidden">
-                    <p>Dreaming of a super win? Pick 3 numbers from 1 to 49. Match all three with the six drawn numbers, and you're a winner! Just two matching numbers still earn you a return bet. It's your chance to hit it big—play now and see if you’re lucky!</p>
+                    <p>Dreaming of a super prize? Pick 3 numbers from 1 to 49. If all three numbers appear in the six drawn numbers, you win immediately! If two numbers match, you’ll receive a return bet. The more you play, the higher your chances—give it a shot!</p>
                 </div>
             </article>
             <article>
                 <img src="path_to_6_55_image.jpg" alt="6/55 Grand Lotto" class="game-image">
                 <h3 class="game-title">6/55 Grand Lotto</h3>
                 <div class="game-details hidden">
-                    <p>Experience the grand thrill! Select 3 numbers from 1 to 55. If all three numbers appear among the six drawn numbers, you win the grand prize! Even with just two matches, a return bet is yours. Try your luck with the Grand Lotto today!</p>
+                    <p>Looking for grand prizes? Choose 3 numbers from 1 to 55. Match all three numbers with the six drawn numbers and win instantly! Even if only two numbers match, you get a return bet. Don’t miss out on your chance—join the excitement today!</p>
                 </div>
             </article>
             <article>
                 <img src="path_to_6_58_image.jpg" alt="6/58 Ultra Lotto" class="game-image">
                 <h3 class="game-title">6/58 Ultra Lotto</h3>
                 <div class="game-details hidden">
-                    <p>Go ultra with your picks! Choose 3 numbers from 1 to 58. All three matching the six drawn numbers means you win big! If two numbers match, you receive a return bet. The Ultra Lotto offers high stakes and exciting rewards. Play now and be a winner!</p>
+                    <p>Get ready for ultra-sized prizes! Pick 3 numbers from 1 to 58. If all three match the six drawn numbers, you win right away. Even two matching numbers earn a return bet. Are you feeling lucky? Play now and see if you can win big!</p>
                 </div>
             </article>
             <article>
                 <img src="path_to_2d_lotto_image.jpg" alt="2D Lotto" class="game-image">
                 <h3 class="game-title">2D Lotto</h3>
                 <div class="game-details hidden">
-                    <p>Pick 2 numbers from 1 to 31. You can choose to play straight (S), rumble (R), or pompi (P). Straight wins require exact order, while rumble is any order, and pompi means the same number. It's a quick and fun game with great chances of winning!</p>
+                    <p>Pick 2 numbers from 1 to 31. Choose 'S' for straight or 'exact order', 'R' for rumble or 'any order', and 'P' for pompi or 'same number'. Match the drawn numbers and win! It's simple and exciting—give it a try today!</p>
                 </div>
             </article>
             <article>
                 <img src="path_to_3d_lotto_image.jpg" alt="3D Lotto" class="game-image">
                 <h3 class="game-title">3D Lotto</h3>
                 <div class="game-details hidden">
-                    <p>Choose 3 numbers from 0 to 9. Play straight (S) for exact order, rumble (R) for any order, or trio (T) for same numbers. It's a dynamic game with multiple ways to win. Try your luck and see if you can claim a prize!</p>
+                    <p>Choose 3 numbers from 0 to 9. Opt for 'S' for straight or 'exact order', 'R' for rumble or 'any order', and 'T' for trio or 'same numbers'. Match the drawn numbers for a chance to win! It’s quick and fun—play now!</p>
                 </div>
             </article>
         </div>
@@ -372,13 +381,13 @@
                         <td>8 - 8 - 8</td>
                     </tr>
                     <tr>
-                        <td>SEPTEMBER 1, 2024</td>
+                        <td> </td>
                         <td>5PM</td>
                         <td>01 - 02</td>
                         <td>8 - 8 - 8</td>
                     </tr>
                     <tr>
-                        <td>SEPTEMBER 1, 2024</td>
+                        <td> </td>
                         <td>9PM</td>
                         <td>01 - 02</td>
                         <td>8 - 8 - 8</td>
@@ -390,13 +399,13 @@
                         <td>8 - 8 - 8</td>
                     </tr>
                     <tr>
-                        <td>SEPTEMBER 2, 2024</td>
+                        <td> </td>
                         <td>5PM</td>
                         <td>01 - 02</td>
                         <td>8 - 8 - 8</td>
                     </tr>
                     <tr>
-                        <td>SEPTEMBER 2, 2024</td>
+                        <td> </td>
                         <td>9PM</td>
                         <td>01 - 02</td>
                         <td>8 - 8 - 8</td>
@@ -408,13 +417,13 @@
                         <td>8 - 8 - 8</td>
                     </tr>
                     <tr>
-                        <td>SEPTEMBER 3, 2024</td>
+                        <td> </td>
                         <td>5PM</td>
                         <td>01 - 02</td>
                         <td>8 - 8 - 8</td>
                     </tr>
                     <tr>
-                        <td>SEPTEMBER 3, 2024</td>
+                        <td> </td>
                         <td>9PM</td>
                         <td>01 - 02</td>
                         <td>8 - 8 - 8</td>
@@ -426,13 +435,13 @@
                         <td>8 - 8 - 8</td>
                     </tr>
                     <tr>
-                        <td>SEPTEMBER 4, 2024</td>
+                        <td> </td>
                         <td>5PM</td>
                         <td>01 - 02</td>
                         <td>8 - 8 - 8</td>
                     </tr>
                     <tr>
-                        <td>SEPTEMBER 4, 2024</td>
+                        <td> </td>
                         <td>9PM</td>
                         <td>01 - 02</td>
                         <td>8 - 8 - 8</td>
@@ -444,13 +453,13 @@
                         <td>8 - 8 - 8</td>
                     </tr>
                     <tr>
-                        <td>SEPTEMBER 5, 2024</td>
+                        <td> </td>
                         <td>5PM</td>
                         <td>01 - 02</td>
                         <td>8 - 8 - 8</td>
                     </tr>
                     <tr>
-                        <td>SEPTEMBER 5, 2024</td>
+                        <td> </td>
                         <td>9PM</td>
                         <td>01 - 02</td>
                         <td>8 - 8 - 8</td>
@@ -462,13 +471,13 @@
                         <td>8 - 8 - 8</td>
                     </tr>
                     <tr>
-                        <td>SEPTEMBER 6, 2024</td>
+                        <td> </td>
                         <td>5PM</td>
                         <td>01 - 02</td>
                         <td>8 - 8 - 8</td>
                     </tr>
                     <tr>
-                        <td>SEPTEMBER 6, 2024</td>
+                        <td> </td>
                         <td>9PM</td>
                         <td>01 - 02</td>
                         <td>8 - 8 - 8</td>
@@ -480,13 +489,13 @@
                         <td>8 - 8 - 8</td>
                     </tr>
                     <tr>
-                        <td>SEPTEMBER 7, 2024</td>
+                        <td> </td>
                         <td>5PM</td>
                         <td>01 - 02</td>
                         <td>8 - 8 - 8</td>
                     </tr>
                     <tr>
-                        <td>SEPTEMBER 7, 2024</td>
+                        <td> </td>
                         <td>9PM</td>
                         <td>01 - 02</td>
                         <td>8 - 8 - 8</td>
@@ -510,27 +519,23 @@
     </div>
 </section>
 
-<!-- Footer Section -->
-<footer>
-    <p>&copy; 2024 LRS Philippines Official. All rights reserved.</p>
-</footer>
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 LRS Philippines Official. All rights reserved.</p>
+    </footer>
 
-<!-- JavaScript -->
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        const gameTitles = document.querySelectorAll('.game-title');
-        gameTitles.forEach(title => {
-            title.addEventListener('click', function() {
-                const details = this.nextElementSibling;
+    <!-- JavaScript -->
+    <script>
+        document.querySelectorAll('.game-title').forEach(title => {
+            title.addEventListener('click', () => {
+                const details = title.nextElementSibling;
                 details.classList.toggle('hidden');
             });
         });
 
-        const navToggle = document.querySelector('.nav-toggle');
-        const navMenu = document.querySelector('nav ul');
-        navToggle.addEventListener('click', function() {
-            navMenu.classList.toggle('active');
+        document.querySelector('.nav-toggle').addEventListener('click', () => {
+            document.querySelector('nav ul').classList.toggle('active');
         });
-    });
-</script>
-</body> </html> ```
+    </script>
+</body>
+</html>
