--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             overflow-x: hidden; /* Prevent horizontal scroll */
         }
 
-        header, nav {
+        header {
             position: fixed;
             width: 100%;
             z-index: 1000;
