--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                         <th>Date</th>
                        	<th>TIME</th>
                         <th>2D WINNING NUMBERS</th>
-                        <th>3D LOTTO WINNING NUMBERS</th>
+                        <th>3D WINNING NUMBERS</th>
                     </tr>
                 </thead>
                 <tbody>
