--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             overflow-x: hidden; /* Prevent horizontal scroll */
         }
 
-        header {
-            position: fixed;
+        header, {
+            position: STICKY;
             width: 100%;
             z-index: 1000;
         }
@@ -370,7 +370,7 @@
                         <th>Date</th>
                        	<th>TIME</th>
                         <th>2D WINNING NUMBERS</th>
-                        <th>3D WINNING NUMBERS</th>
+                        <th>3D LOTTO WINNING NUMBERS</th>
                     </tr>
                 </thead>
                 <tbody>
