--- a/index.html
+++ b/index.html
@@ -232,13 +232,12 @@
 <body>
     <!-- Header Section -->
     <header>
-        <img src="img/lrs.png" alt="LRS Philippines Logo" class="logo">
         <h1>LRS Philippines Official</h1>
     </header>
 
     <!-- Navigation Menu -->
     <nav>
-        <button class="nav-toggle">☰ Menu</button>
+        <button class="nav-toggle"><img src="img/lrs.png" alt="LRS Philippines Logo" class="logo"> Menu</button>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About Us</a></li>
