--- a/index.html
+++ b/index.html
@@ -270,42 +270,42 @@
         <div class="container">
             <h2>Our Games</h2>
             <article>
-                <img src="path_to_6_45_image.jpg" alt="6/45 Mega Lotto" class="game-image">
+                <img src="45 PRIZE.jpg" alt="6/45 Mega Lotto" class="game-image">
                 <h3 class="game-title">6/45 Mega Lotto</h3>
                 <div class="game-details hidden">
                     <p>Ready for a mega win? Choose 3 numbers from 1 to 45 and wait for the draw! If all three of your numbers match the six drawn numbers, you win instantly. Even if only two numbers match, you get a return bet. Exciting, right? Join now and try your luck!</p>
                 </div>
             </article>
             <article>
-                <img src="path_to_6_49_image.jpg" alt="6/49 Super Lotto" class="game-image">
+                <img src="49 PRIZE.jpg" alt="6/49 Super Lotto" class="game-image">
                 <h3 class="game-title">6/49 Super Lotto</h3>
                 <div class="game-details hidden">
                     <p>Dreaming of a super prize? Pick 3 numbers from 1 to 49. If all three numbers appear in the six drawn numbers, you win immediately! If two numbers match, you’ll receive a return bet. The more you play, the higher your chances—give it a shot!</p>
                 </div>
             </article>
             <article>
-                <img src="path_to_6_55_image.jpg" alt="6/55 Grand Lotto" class="game-image">
+                <img src="55 PRIZE.jpg" alt="6/55 Grand Lotto" class="game-image">
                 <h3 class="game-title">6/55 Grand Lotto</h3>
                 <div class="game-details hidden">
                     <p>Looking for grand prizes? Choose 3 numbers from 1 to 55. Match all three numbers with the six drawn numbers and win instantly! Even if only two numbers match, you get a return bet. Don’t miss out on your chance—join the excitement today!</p>
                 </div>
             </article>
             <article>
-                <img src="path_to_6_58_image.jpg" alt="6/58 Ultra Lotto" class="game-image">
+                <img src="58 PRIZE.jpg" alt="6/58 Ultra Lotto" class="game-image">
                 <h3 class="game-title">6/58 Ultra Lotto</h3>
                 <div class="game-details hidden">
                     <p>Get ready for ultra-sized prizes! Pick 3 numbers from 1 to 58. If all three match the six drawn numbers, you win right away. Even two matching numbers earn a return bet. Are you feeling lucky? Play now and see if you can win big!</p>
                 </div>
             </article>
             <article>
-                <img src="path_to_2d_lotto_image.jpg" alt="2D Lotto" class="game-image">
+                <img src="2D PRIZE.jpg" alt="2D Lotto" class="game-image">
                 <h3 class="game-title">2D Lotto</h3>
                 <div class="game-details hidden">
                     <p>Pick 2 numbers from 1 to 31. Choose 'S' for straight or 'exact order', 'R' for rumble or 'any order', and 'P' for pompi or 'same number'. Match the drawn numbers and win! It's simple and exciting—give it a try today!</p>
                 </div>
             </article>
             <article>
-                <img src="path_to_3d_lotto_image.jpg" alt="3D Lotto" class="game-image">
+                <img src="3D PRIZE.jpg" alt="3D Lotto" class="game-image">
                 <h3 class="game-title">3D Lotto</h3>
                 <div class="game-details hidden">
                     <p>Choose 3 numbers from 0 to 9. Opt for 'S' for straight or 'exact order', 'R' for rumble or 'any order', and 'T' for trio or 'same numbers'. Match the drawn numbers for a chance to win! It’s quick and fun—play now!</p>
