--- a/index.html
+++ b/index.html
@@ -318,191 +318,166 @@
     <section id="results">
         <div class="container">
             <h2>Weekly Results</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>PICK 3</th>
-                        <th>Winning Numbers</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>SEPTEMBER 1, 2024</td>
-                        <td>6/45 Mega Lotto</td>
-                        <td>01 - 02 - 03 - 04 - 05 -06</td>
-                    </tr>
-                    <tr>
-                        <td>SEPTEMBER 2, 2024</td>
-                        <td>6/49 Super Lotto</td>
-                        <td>01 - 02 - 03 - 04 - 05 -06</td>
-                    </tr>
-                    <tr>
-                        <td>SEPTEMBER 3, 2024</td>
-                        <td>6/45 Mega Lotto</td>
-                        <td>01 - 02 - 03 - 04 - 05 -06</td>
-                    </tr>
-                    <tr>
-                        <td>SEPTEMBER 4, 2024</td>
-                        <td>6/49 Super Lotto</td>
-                        <td>01 - 02 - 03 - 04 - 05 -06</td>
-                    </tr>
-                    <tr>
-                        <td>SEPTEMBER 5, 2024</td>
-                        <td>6/58 Ultra Lotto</td>
-                        <td>01 - 02 - 03 - 04 - 05 -06</td>
-                    </tr>
-                    <tr>
-                        <td>SEPTEMBER 6, 2024</td>
-                        <td>6/55 Grand Lotto</td>
-                        <td>01 - 02 - 03 - 04 - 05 -06</td>
-                    </tr>
-                    <tr>
-                        <td>SEPTEMBER 7, 2024</td>
-                        <td>6/49 Super Lotto</td>
-                        <td>01 - 02 - 03 - 04 - 05 -06</td>
-                    </tr>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lotto Results and Winners</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f9f9f9;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+        th, td {
+            padding: 10px;
+            border: 1px solid #ddd;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+        .section {
+            margin-bottom: 50px;
+        }
+        .search-container {
+            margin: 20px 0;
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+        }
+        input[type="date"], input[type="text"], select {
+            padding: 10px;
+            font-size: 16px;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+        }
+    </style>
+</head>
+<body>
 
-            <table>
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                       	<th>TIME</th>
-                        <th>2D WINNING NUMBERS</th>
-                        <th>3D LOTTO WINNING NUMBERS</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>SEPTEMBER 1, 2024</td>
-                        <td>2PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td>5PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td>9PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td>SEPTEMBER 2, 2024</td>
-                        <td>2PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td>5PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td>9PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td>SEPTEMBER 3, 2024</td>
-                        <td>2PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td>5PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td>9PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td>SEPTEMBER 4, 2024</td>
-                        <td>2PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td>5PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td>9PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td>SEPTEMBER 5, 2024</td>
-                        <td>2PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td>5PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td>9PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td>SEPTEMBER 6, 2024</td>
-                        <td>2PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td>5PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td>9PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td>SEPTEMBER 7, 2024</td>
-                        <td>2PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td>5PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td>9PM</td>
-                        <td>01 - 02</td>
-                        <td>8 - 8 - 8</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </section>
+    <h1>Lotto Results and Winners</h1>
+
+    <!-- Search Bar -->
+    <div class="search-container">
+        <!-- Dropdown for dates -->
+        <select id="dateDropdown">
+            <option value="">Select a date</option>
+            <option value="2024-09-01">2024-09-01</option>
+            <!-- Add more dates as options -->
+        </select>
+
+        <!-- OR search by typing date -->
+        <input type="date" id="dateInput" placeholder="Enter Date">
+
+        <!-- Search button -->
+        <button onclick="filterResults()">Search</button>
+    </div>
+
+    <div class="section" id="winning-numbers">
+        <h2>Winning Numbers</h2>
+        <table id="winningNumbersTable">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Draw</th>
+                    <th>Winning Numbers</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Winning Numbers Data -->
+                <tr>
+                    <td>2024-09-01</td>
+                    <td>6/49 SUPER LOTTO</td>
+                    <td>01-02-03-04-05-06</td>
+                </tr>
+                <!-- More rows here -->
+            </tbody>
+        </table>
+    </div>
+
+    <div class="section" id="winners">
+        <h2>Winners</h2>
+        <table id="winnersTable">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Team</th>
+                    <th>Agent</th>
+                    <th>Winner</th>
+                    <th>Combination</th>
+                    <th>Bet Amount</th>
+                    <th>Type of Bet</th>
+                    <th>Prize</th>
+                    <th>Draw</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Winners Data -->
+                <tr>
+                    <td>2024-09-01</td>
+                    <td>TEAM LUCKY</td>
+                    <td>DAVID</td>
+                    <td>SAMPLE WINNER 1</td>
+                    <td>01-02-03</td>
+                    <td>25</td>
+                    <td>FB</td>
+                    <td>7500</td>
+                    <td>6/49 SUPER LOTTO</td>
+                </tr>
+                <!-- More rows here -->
+            </tbody>
+        </table>
+    </div>
+
+    <script>
+        function filterResults() {
+            // Get the date value from dropdown and input
+            let selectedDate = document.getElementById('dateDropdown').value;
+            let typedDate = document.getElementById('dateInput').value;
+
+            // Use the typed date if provided, otherwise use the dropdown value
+            let filterDate = typedDate ? typedDate : selectedDate;
+
+            // Get tables and rows
+            let winningNumbersTable = document.getElementById('winningNumbersTable').getElementsByTagName('tbody')[0];
+            let winnersTable = document.getElementById('winnersTable').getElementsByTagName('tbody')[0];
+
+            filterTableRows(winningNumbersTable, filterDate);
+            filterTableRows(winnersTable, filterDate);
+        }
+
+        function filterTableRows(tableBody, filterDate) {
+            let rows = tableBody.getElementsByTagName('tr');
+
+            for (let i = 0; i < rows.length; i++) {
+                let dateCell = rows[i].getElementsByTagName('td')[0];
+                if (dateCell) {
+                    let dateValue = dateCell.textContent || dateCell.innerText;
+
+                    // Show row if date matches the filterDate, hide otherwise
+                    if (dateValue.indexOf(filterDate) > -1) {
+                        rows[i].style.display = "";
+                    } else {
+                        rows[i].style.display = "none";
+                    }
+                }       
+            }
+        }
+    </script>
 
 <!-- Winners Section -->
 <section id="winners">
